[project]
name = "pjecz-columba-cli-typer"
version = "0.1.0"
description = "Anunciador de la recepción. Para vocear las audiencias. Es un CLI hecho con Python Typer."
authors = [
    {name = "Guillermo Valdes",email = "guillermo.valdes@pjecz.gob.mx"}
]
license = {text = "AGPL3"}
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "piper-tts (>=1.4.2,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.poetry]
packages = [{include = "pjecz_columba_cli_typer", from = "src"}]

[tool.poetry.scripts]
cli = 'pjecz_columba_cli_typer.app:app'

[tool.basedpyright]
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
