[project]
name = "pjecz-columba-cli-typer"
version = "0.1.0"
description = "Anunciador de la recepción. Para vocear las audiencias. Es un CLI hecho con Python Typer."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "piper-tts>=1.4.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyttsx3>=2.99",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
ignore = ["F821"]
line-length = 128
